Class1.txt
>>> 2*3
6
>>> 3*4.5
13.5
>>> 4/5
0
>>> 4/5.5
0.7272727272727273
>>> 4/5.0
0.8
>>> 3^2
1
>>> 3.0^2
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for ^: 'float' and 'int'
>>> 3.0*3.0
9.0
>>> 3.0^2.0
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for ^: 'float' and 'float'
>>> sqrt(9)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'sqrt' is not defined
>>> a=4
>>> print(a)
4
>>> a=5
>>> print(a)
5
>>> b=0.4
>>> c=a+b
>>> print(c)
5.4
>>> c='a'
>>> a+c
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: unsupported operand type(s) for +: 'int' and 'str'
>>> d='b
  File "<stdin>", line 1
    d='b
       ^
SyntaxError: EOL while scanning string literal
>>> d='b'
>>> c+d
'ab'
>>> c="Thank"
>>> d="you"
>>> c+d
'Thankyou'
>>> c+' '+d
'Thank you'
>>> lista=[3,3.4,'abc',c,[1,2,3]]
>>> lista[3]
'Thank'
>>> lista[0]
3
>>> lista[1]
3.4
>>> lista[2]
'abc'
>>> lista[3]
'Thank'
>>> lista[4]
[1, 2, 3]
>>> lista[-1]
[1, 2, 3]
>>> lista[-2]
'Thank'
>>> lista[-3]
'abc'
>>> lista[-50]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: list index out of range
>>> lista[-4]
3.4
>>> lista[-5]
3
>>> lista[0]=4
>>> lista[0]
4
>>> seta={1,2,3}
>>> seta[0]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'set' object does not support indexing
>>> range(lista)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: range() integer end argument expected, got list.
>>> lista[1:3]
[3.4, 'abc']
>>> listb=lista[1:3]
>>> print(listb)
[3.4, 'abc']
>>> del lista[0]
>>> print(lista)
[3.4, 'abc', 'Thank', [1, 2, 3]]
>>> del lista[1:3]
>>> print(lista)
[3.4, [1, 2, 3]]        
>>> print(lista)
[3.4, [1, 2, 3], 'add another']
>>> lista.append(3.5)
>>> print(lista)
[3.4, [1, 2, 3], 'add another', 3.5]
>>> print(listb)
[3.4, 'abc']
>>> listc=lista+listb
>>> print(listc)
[3.4, [1, 2, 3], 'add another', 3.5, 3.4, 'abc']
>>> list1=[1,2]
>>> listbig=list1 * 10
>>> print(listbig)
[1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2]
>>> fibs= (2,3,4,5)
>>> fibs[0]
2
>>> fibs[3]
5
>>> fibs[3]
>>> fibs[3]=6
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'tuple' object does not support item assignment     
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: list index out of range
>>> dicta['10']
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: list indices must be integers, not str 
  File "<stdin>", line 1
dicta={'10':'Lucas','11':'Shawn'}                                                    
>>> dicta['11']
'Shawn'
>>> dicta['10']
'Lucas'
>>> 
